<resources>
    <string name="app_name">手机拯救者</string>
    <string name="action_settings">设置</string>

    <string name="title_activity_help">帮助</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="helpinfo">啊 没有帮助</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="face_detect">人脸检测</string>
    <string name="title_activity_setting">应用设置</string>
    <string name="app_list_title">应用使用情况</string>
    <string name="app_set_face_det_open">开启人脸检测</string>
    <string name="app_set_about_author">关于我们</string>
    <string name="app_set_about_app">关于软件</string>
    <string name="app_set_clear_cache">清除数据</string>
    <string name="app_set_check_update">检查更新</string>
    <string name="app_set_exit">退出应用</string>
    <string name="set_fac_det_seg">开启后，请长按返回键退回到桌面即开启摄像头。打开后将在您的手机后台进行拍照及人脸检测，检测到累计用眼10分钟则发出提示，可能会消耗更多的电量。</string>
    <string name="title_activity_manager">应用管理</string>
    <string name="act_man_app">当前应用： </string>
    <string name="basic_function">应用管理及时间统计\n应用管理提供了管理应用使用时限和设置限制方式的功能，时间统计包括最常使用的应用以及每天和每周及每月使用各个应用的时间。</string>
    <string name="question1">Q1：手机拯救者支持什么设备？</string>
    <string name="answer1">Android5.0以上版本的Android手机</string>
    <string name="question2">Q2：为什么看不到统计信息？</string>
    <string name="answer2">查看是否开启相应权限</string>
    <string name="question3">Q3：为什么打开人脸检测后闪退？</string>
    <string name="answer3">查看是否开启相应权限\n由于设备安全限制，部分机型可能出现后台拍照闪退\nTips：当正在使用相机时会导致人脸检测失败</string>
    <string name="question4">Q4：打开检测或设置应用限制后仍未收到提示？</string>
    <string name="answer4">可能是后台清理掉啦，请运行时不要清掉手机拯救者</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
