<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.SettingActivity">

    <include layout="@layout/activity_common_title" />

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollbarThumbVertical="@drawable/scrollbar_handle_vertical"
            android:layout_marginTop="20dp"
            android:visibility="visible">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

            <LinearLayout style="@style/set_bg_layout" >

                <LinearLayout
                        android:id="@+id/ll_set_facedetect"
                        style="@style/set_bg_top_layout">

                    <TextView
                            android:id="@+id/tv_set_facedetect"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1.0"
                            android:text="@string/app_set_face_det_open"
                            android:textColor="#ff333333"
                            android:textSize="20dp" />

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="12.0dip"
                            android:src="@drawable/setting_arrow" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    style="@style/set_bg_layout" >

                <LinearLayout
                        android:id="@+id/ll_set_about_author"
                        style="@style/set_bg_top_layout" >

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1.0"
                            android:text="@string/app_set_about_author"
                            android:textColor="#ff333333"
                            android:textSize="20dp" />

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="12.0dip"
                            android:src="@drawable/setting_arrow" />
                </LinearLayout>

                <View
                        android:layout_width="fill_parent"
                        android:layout_height="1.0px"
                        android:background="@drawable/set_shape_line" />

                <LinearLayout
                        android:id="@+id/ll_set_product_info"
                        style="@style/set_bg_bottom_layout" >

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1.0"
                            android:text="@string/app_set_about_app"
                            android:textColor="#ff333333"
                            android:textSize="20dp" />

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="12.0dip"
                            android:src="@drawable/setting_arrow" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    style="@style/set_bg_layout" >

                <View
                        android:layout_width="fill_parent"
                        android:layout_height="1.0px"
                        android:background="@drawable/set_shape_line" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                <LinearLayout
                        style="@style/set_bg_layout" >

                    <LinearLayout
                            android:id="@+id/ll_set_exit"
                            style="@style/set_bg_quit_layout">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_weight="1.0"
                                android:text="@string/app_set_exit"
                                android:textColor="#ff333333"
                                android:textSize="20dp" />

                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="12.0dip"
                                android:src="@drawable/setting_arrow" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>